# Triangle

./: .gitignore  CMakeLists.txt  CMakePresets.json
resources/shaders/: triangle.frag  triangle.vert
src/: CMakeLists.txt  Drawer.cpp  Drawer.h  Figure.cpp  Figure.h  Shader.cpp  Shader.h  main.cpp
